# wolves-metadata

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  package.json  snowpack.config.js  tsconfig.json
.github/workflows/: node.js.yml
cpp/: CMakeLists.txt  build-ci.sh
cpp/stream_decoder/: stream_decoder.cpp  stream_decoder.h  stream_decoder_embinder.cpp
cpp/utils/: emscripten_utils.cpp  emscripten_utils.hpp
public/: index.html
src/: index.ts  utils.ts
src/workers/: stream_decoder_module.ts
test/: test-mocha.ts  test-stream-decoder.ts
tools/: .gitignore  Makefile  setup_paths.mk  setup_stages.mk
tools/depends/native/emscripten/: package.mk
tools/depends/wasm/codecbox.js/: 0001-Fix-error-building-OpenH264.patch  0002-Fix-errors-building-with-latest-llvm.patch  0003-Enable-select-filter.patch  0004-Don-t-call-bash-with-x.patch  0005-Don-t-download-FFmpeg.patch  package.mk
tools/depends/wasm/ffmpeg/: package.mk  pkg_config
tools/depends/wasm/libvpx/: package.mk
tools/depends/wasm/openh264/: 0001-Fix-build-on-macOS.patch
tools/depends/wasm/x264/: 0001-Remove-problematic-configure-test.patch  package.mk
